--- a/.github/workflows/build_system_arm64.yml
+++ b/.github/workflows/build_system_arm64.yml
@@ -1,12 +1,13 @@
 name: Build system on Debian 12 ARM64
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
+  #push:
+  #  branches:
+  #    - main
+  #pull_request:
+  #  branches:
+  #    - main
 
 jobs:
   test:
