Add submodules for tools-make and tools-scripts

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "dubstep-dark-theme"]
 	path = dubstep-dark-theme
 	url = https://github.com/ds-repos/dubstep-dark-theme
+[submodule "tools-make"]
+	path = tools-make
+	url = https://github.com/gnustep/tools-make.git
+[submodule "tools-scripts"]
+	path = tools-scripts
+	url = https://github.com/gnustep/tools-scripts.git
