--- a/.github/workflows/build_system_arm64.yml
+++ b/.github/workflows/build_system_arm64.yml
@@ -35,7 +35,7 @@ jobs:
         # Set an output parameter `uname` for use in subsequent steps
         run: |
           ./build.sh
-          cd /home/runner/work/system/system/ && tar -zcvf system-amd64.tar.gz /Developer /Library /System
+          cd /home/runner/work/system/system/ && tar -zcvf system-arm64.tar.gz /Developer /Library /System
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
