--- a/.github/workflows/build_system_arm64.yml
+++ b/.github/workflows/build_system_arm64.yml
@@ -22,6 +22,26 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: true
+    - name: Get latest ARM64 workflow run ID
+      id: get_latest_arm64_run
+      run: |
+          arm64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/library/actions/workflows/build_library_arm64.yml/runs?status=success&per_page=1")
+          echo "ARM64 API response: $arm64_response"
+          latest_run_arm64=$(echo $arm64_response | jq -r '.workflow_runs[0].id')
+          echo "Latest ARM64 run ID: $latest_run_arm64"
+          echo "ARM64_RUN_ID=$latest_run_arm64" >> $GITHUB_ENV
+      shell: bash
+    - name: Get ARM64 artifact URL
+      id: get_arm64_artifact_url
+      run: |
+        artifact_url_arm64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/library/actions/runs/${{ env.ARM64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
+        echo "ARM64 Artifact URL: $artifact_url_arm64"
+        echo "ARM64_ARTIFACT_URL=$artifact_url_arm64" >> $GITHUB_ENV
+      shell: bash
+    - name: Download ARM64 artifact
+      run: |
+        curl -s -o gershwin-library-arm64.zip -L -u ${{ secrets.GH_TOKEN }} "${{ env.ARM64_ARTIFACT_URL }}"
+      shell: bash
     - name: Build system on Debian 12 ARM64
       uses: uraimo/run-on-arch-action@v2
       id: runcmd
@@ -34,10 +54,11 @@ jobs:
           echo "my info: " `uname -a`  
         # Set an output parameter `uname` for use in subsequent steps
         run: |
-          ./build.sh
-          cd /home/runner/work/system/system/ && tar -zcvf system-arm64.tar.gz /Developer /Library /System
+          unzip gershwin-library-arm64.zip
+          tar -xf /__w/system/system/library.txz -C /
+          make install
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: gershwin-system-arm64-main
-        path: /home/runner/work/system/system/system-arm64.tar.gz
+        path: /tmp/system.txz
