--- a/.github/workflows/build_system_amd64.yml
+++ b/.github/workflows/build_system_amd64.yml
@@ -31,4 +31,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: gershwin-system-amd64-main
-          path: /tmp/system.txz
+          path: /__w/system/system/system.txz
