--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "apps-gworkspace"]
 	path = apps-gworkspace
 	url = https://github.com/gnustep/apps-gworkspace.git
+[submodule "tools-scripts"]
+	path = tools-scripts
+	url = https://github.com/gnustep/tools-scripts.git
