--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "tools-scripts"]
 	path = tools-scripts
 	url = https://github.com/gnustep/tools-scripts.git
+[submodule "dubstep-dark-theme"]
+	path = dubstep-dark-theme
+	url = https://github.com/gershwin-os/dubstep-dark-theme.git
