Add workspace submodule from Gershwin

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "dubstep-dark-theme"]
 	path = dubstep-dark-theme
 	url = https://github.com/gershwin-os/dubstep-dark-theme.git
+[submodule "workspace"]
+	path = workspace
+	url = https://github.com/gershwin-os/workspace.git
